k8s/03_campusxchange-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: campusxchange-api-svc
spec:
  type: ClusterIP
  selector:
    app: campusxchange-api-pod
  ports:
    - name: app-port-mapping
      protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: campusxchange-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: campusxchange-api-pod
  template:
    metadata:
      labels:
        app: campusxchange-api-pod
    spec:
      containers:
        - name: campusxchange-api
          image: campusxchange/campusxchange-api:latest
          ports:
            - containerPort: 8080
