k8s/05_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: campusxchange-ingress
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: campusxchange-ui-svc
                port:
                  number: 80
    - host: backend.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: campusxchange-api-svc
                port:
                  number: 8080
